log

Thu Mar 10 21:55:02 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1723c80
Thu Mar 10 22:05:16 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a9b656a
Thu Mar 10 22:17:42 HSP 2022: 
 exercises.c | 28 +++++++++++++++++++++++-----
 1 file changed, 23 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'asignarValor':
exercises.c:96:13: error: incompatible types when assigning to type 'Vector {aka struct <anonymous>}' from type 'int'
    *(v + i) = valor;
             ^
exercises.c: In function 'obtenerValor':
exercises.c:105:11: error: incompatible types when returning type 'Vector {aka struct <anonymous>}' but 'int' was expected
    return *(v + i);
           ^~~~~~~~
exercises.c: In function 'sumaV':
exercises.c:117:28: error: invalid operands to binary + (have 'Vector {aka struct <anonymous>}' and 'Vector {aka struct <anonymous>}')
       *(c + i) = (*(a + i) + *(b + i));
                   ~~~~~~~~ ^ ~~~~~~~~
exercises.c: In function 'obtenerValor':
exercises.c:106:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e0b0bee
Thu Mar 10 22:21:29 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'asignarValor':
exercises.c:96:13: error: incompatible types when assigning to type 'Vector {aka struct <anonymous>}' from type 'int'
    *(v + i) = valor;
             ^
exercises.c: In function 'obtenerValor':
exercises.c:105:11: error: incompatible types when returning type 'Vector {aka struct <anonymous>}' but 'int' was expected
    return *(v + i);
           ^~~~~~~~
exercises.c: In function 'sumaV':
exercises.c:117:28: error: invalid operands to binary + (have 'Vector {aka struct <anonymous>}' and 'Vector {aka struct <anonymous>}')
       *(c + i) = (*(a + i) + *(b + i));
                   ~~~~~~~~ ^ ~~~~~~~~
exercises.c: In function 'obtenerValor':
exercises.c:106:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
a5209d7
